2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: include main.am, require automake-1.5.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added rtems_header.html and rtems_footer.html.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.