@@ -1,4 +1,4 @@
-@set UPDATED 17 January 2002
-@set UPDATED-MONTH January 2002
-@set EDITION ss-20021007
-@set VERSION ss-20021007
+@set UPDATED 24 October 2002
+@set UPDATED-MONTH October 2002
+@set EDITION 20021021-test
+@set VERSION 20021021-test
